fix write post avatar alignment

--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -384,7 +384,7 @@ body {
   border: none;
   border-bottom: 1px solid #DDD;
   margin-bottom: 0;
-  width: 88.7%;
+  width: 86.7%;
 }
 
 #write-post-body {
